objects/Title__c.object
<CustomObject>
    <description>Hold fields specifically related to Physical &amp; Digital Titles.</description>
    <fields>
        <fullName>ACV_Titles_External_ID__c</fullName>
        <description>Unique Title Id populated by backend through Title Service.</description>
        <externalId>true</externalId>
        <label>ACV Titles External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Buyer_Organization_Id__c</fullName>
        <description>Buyer Account Id - populated by the backed (engineering team) using SF TitleService.</description>
        <inlineHelpText>Buyer Account Id - populated by the backed (engineering team) using SF TitleService.</inlineHelpText>
        <label>Buyer Organization Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_User_Id__c</fullName>
        <description>Buyer Contact Id - populated by the backed (engineering team).</description>
        <inlineHelpText>Buyer Contact Id - populated by the backed (engineering team).</inlineHelpText>
        <label>Buyer User Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Case</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Titles</relationshipLabel>
        <relationshipName>Titles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Pending_Related_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <description>We only create shell Case &amp; Title records when we get a &apos;created&apos; event in TitleService. A batch file is run separately to populate related salesforce ids to avoid Row Lock error. This field is set to False by the batch file that populates the related salesforce ids in Case &amp; Title records.</description>
        <label>Is Pending Related Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Auction_Id__c</fullName>
        <description>Auction Id - populated by the backed (engineering team) using SF TitleService.</description>
        <inlineHelpText>Auction Id - populated by the backed (engineering team) using SF TitleService.</inlineHelpText>
        <label>Legacy Auction Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Organization_Id__c</fullName>
        <description>Seller Account Id - populated by the backed (engineering team) using SF TitleService.</description>
        <inlineHelpText>Seller Account Id - populated by the backed (engineering team) using SF TitleService.</inlineHelpText>
        <label>Seller Organization Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_User_Id__c</fullName>
        <description>Seller Contact Id - populated by the backed (engineering team) using SF TitleService.</description>
        <inlineHelpText>Seller Contact Id - populated by the backed (engineering team) using SF TitleService.</inlineHelpText>
        <label>Seller User Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Id_Type__c</fullName>
        <description>If &apos;guid&apos;, use titleId field otherwise use legacyTitleId field.</description>
        <inlineHelpText>If &apos;guid&apos;, use titleId field otherwise use legacyTitleId field.</inlineHelpText>
        <label>Title Id Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>guid</fullName>
                </value>
                <value>
                    <fullName>int</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <description>Vehicle Id - populated by the backed (engineering team) using SF TitleService.</description>
        <inlineHelpText>Vehicle Id - populated by the backed (engineering team) using SF TitleService.</inlineHelpText>
        <label>VIN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Title</label>
    <nameField>
        <label>Title Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Titles</pluralLabel>
    <recordTypes>
        <fullName>Digital_Title</fullName>
        <active>true</active>
        <description>Digital Title</description>
        <label>Digital Title</label>
    </recordTypes>
    <recordTypes>
        <fullName>Physical_Title</fullName>
        <active>true</active>
        <description>Physical Title</description>
        <label>Physical Title</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>